--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "bus-app-backend",
   "version": "1.0.0",
@@ -11,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "mongoose": "^8.4.1"
